# uv-project

first/: pyproject.toml
first/src/first/: .env  app 2.py  app.py  help.md  llm.py  main.py  quiry.py  skill.py
